# sherpa-onnx-android

./: CMakeLists.txt  README.md  new-release.sh
android/SherpaOnnxTts/: gradle.properties
android/SherpaOnnxTts/app/: build.gradle
android/SherpaOnnxTts/app/src/main/java/com/k2fsa/sherpa/onnx/: MainActivity.kt
sherpa-onnx/: CMakeLists.txt
